# cfa-dataops

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .template-version  MANIFEST.in  README.md  changelog.md  mkdocs.yaml  pyproject.toml  ruff.toml  todo.md
.dvc/: config
.github/ISSUE_TEMPLATE/: bug_report.md  new_issue.md
.github/actions/mkdocs-build/: action.yaml
.github/actions/pre-commit/: action.yaml
.github/actions/setup-poetry/: action.yaml
.github/workflows/: mkdocs.yaml  pre-commit.yaml  pytest.yaml  release.yaml  run_qaqc.yaml  sync-template.yaml  sync-template_PR.yaml  tagging.yaml  test_coverage_badge.yaml
cfa/dataops/: __init__.py  catalog.py  command.py  config.ini  config_validator.py  soda.py  type_stubs.py  utils.py
cfa/dataops/create_catalog/: __init__.py  command.py
cfa/dataops/create_catalog/repo_files/: .gitignore
cfa/dataops/create_catalog/repo_templates/: MANIFEST.in.mako  __init__.py.mako  catalog_defaults.toml.mako  pyproject.toml.mako
cfa/dataops/datasets/scenarios/: covid19_hospitalizations.toml  covid19_vaccination_trends.toml  covid19_vax_coverage_adult.toml  covid19_vax_coverage_child.toml  covid_rd18_vax_curves.toml  donor_seroprevalence_2020.toml  donor_seroprevalence_2022.toml  fips_to_name.toml  fips_to_name_improved.toml  omicron_variant_regions.toml  sars_cov2_proportions.toml
cfa/dataops/etl/scenarios/: covid19_vax_coverage_adult.py  covid19_vax_coverage_child.py  covid19hospitalizations.py  covid19vax_trends.py  donor_seroprevalence_2020.py  fips_to_name_improved.py  hospitalization.py  sars_cov2_proportions.py  seroprevalence.py
cfa/dataops/modeling/: __init__.py
cfa/dataops/modeling/vax_hill_fitting/: README.md  run.py
cfa/dataops/reporting/: __init__.py  catalog.py
cfa/dataops/stub_templates/: __init__.py  catalog.pyi.mako  init.pyi.mako
cfa/dataops/visualization/: composition.py
cfa/dataops/workflows/covid/: __init__.py  generate_data.py  run.py
cfa/dataops/workflows/post_processing/: files_io.py
cfa/scenarios/dataops/: __init__.py  config_validator.py
cfa/scenarios/dataops/datasets/: __init__.py  catalog.py  config_validator.py  covid19_hospitalizations.toml  (+13 more)
docs/: access_ledger.md  api.md  catalog_creation.md  cli_tools.md  data_developer_guide.md  data_user_guide.md  dataset_developer.md  dataset_user.md  index.md  managing_catalogs.md  release_presntations.md  report_generation.md  reportcat_publish_example.md  reportcat_quickstart.md
docs/assets/presentations/: cfa-division-meeting-20250828.md
docs/presentations/: cfa-division-meeting-20250828.html  cfa-division-meeting-20250828.md
docs/release_notes/: v2025.12.10.md
dvc_poc/data/: sample.parquet.dvc  sample.txt.dvc
dvc_script/: fetch_secret.py
examples/reportcat/: minimal_report.ipynb  publish_report.py  run_minimal_report.py
tests/: conftest.py  test_blob_access_check.py  test_blob_endpoint_download.py  test_blob_endpoint_resolve_version.py  test_blob_endpoint_save_methods.py  test_command.py  test_config_validator.py  test_create_catalog.py  test_datasets_catalog.py  test_reporting_catalog.py  test_soda.py  test_type_stubs.py  test_utils_tree.py  test_utils_version_matcher.py
tests/datasets/: test_covid19_vax_coverage_adult.py  test_covid19_vax_coverage_child.py  test_covid19_vax_trends.py  test_covid19hospitalizations.py  test_donor_seroprevalence_2020.py  test_donor_seroprevalence_2022.py  test_fips_to_name_improved.py  test_sars_cov2_proportions.py  test_seroprevalence.py
tests/fixtures/: expected_catalog_stub.pyi
tests/test_covid_wf/: test_funcs.py  test_generate_data.py  test_run.py
tests/test_datasets/: etl_test.toml  experiment_test.toml  multistage_test.toml  reference_test.toml
typings/cfa/dataops/: __init__.pyi  catalog.pyi
(+88 files in other folders)
