[project]
name = "cfa.scenarios.dataops"
version = "2025.03.04.0"
description = "Data cataloging, ETL, modeling, verification, and validation for the CFA Scenarios Team"
authors = [
    {name = "Phil Rogers", email = "ap66@cdc.gov"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "cfa-azure @ git+https://github.com/CDCgov/cfa_azure.git",
    "tomli (>=2.2.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "cfa"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
