[project]
name = "cfa.scenarios.dataops"
version = "2025.05.01.0"
description = "Data cataloging, ETL, modeling, verification, and validation for the CFA Scenarios Team"
authors = [
    {name = "Phil Rogers", email = "ap66@cdc.gov"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "cfa-azure @ git+https://github.com/CDCgov/cfa_azure.git",
    "tomli (>=2.2.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "mako (>=1.3.9,<2.0.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3)",
    "polars (>=1.26.0)"
]

[tool.poetry]
packages = [{include = "cfa"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
