[project]
name = "cfa.dataops"
version = "2025.10.31.0a"
description = "Data cataloging, ETL, modeling, verification, and validation for CFA"
authors = [
    { name = "Phil Rogers", email = "ap66@cdc.gov" },
    { name = "Ryan Raasch", email = "xng3@cdc.gov" },
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "cfa-cloudops @ git+https://github.com/CDCgov/cfa-cloudops.git",
    "tomli (>=2.2.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "mako (>=1.3.9,<2.0.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "matplotlib (~=3.9)",
    "pandas (>=2.2.3)",
    "polars (>=1.26.0)",
    "tqdm (>=4.67.0)",
    "altair (>=5.5.0,<6.0.0)",
    "vl-convert-python (>=1.7.0,<2.0.0)",
    "pandera[pandas] (>=0.24.0)",
    "papermill (>=2.6.0,<3.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "itables (>=2.4.4,<3.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "jupyterlab (>=4.4.5,<5.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "faker (>=37.8.0,<38.0.0)",
]

[tool.poetry]
packages = [{ include = "cfa" }]


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.1.1"
hypothesis = "^6.133.0"
coverage-badge = "^1.1.2"

[tool.poetry.group.mkdocs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.16"
mkdocstrings = { extras = ["python"], version = "^0.30.0" }
mdx-truly-sane-lists = "^1.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dataops_catalog_init = "cfa.dataops.create_catalog.command:main"
dataops_datasets = "cfa.dataops.command:get_available_data"
dataops_stages = "cfa.dataops.command:get_dataset_stages"
dataops_versions = "cfa.dataops.command:get_dataset_versions"
dataops_save = "cfa.dataops.command:save_data_locally"


[tool.pytest.ini_options]
addopts = "tests --doctest-modules -vv --cov=cfa --cov-report html --cov-report term"
